2007-06-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/save.c (save_tics): save [xyz]tics must not follow the "offset"
	info with a bare number, because a negative number will be mis-parsed.
	Bugfix.

2007-06-12  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c:  Added a cmap_struct for linked list of colormaps for
	plot_struct so that a needed colormap is not discarded.
	(FreeColormapList):  New function to free all colormaps in linked list.
	(delete_plot):  Call FreeColormapList().
	(prepare_plot):  Initialize plot->first_cmap_struct to NULL at first
	use.  Call FreeColormapList() and release no longer needed resources.
	(record, case X11_GR_MAKE_PALETTE):  Stored a command into the plot
	buffer to indicate a palette/colormap change.  Removed cruft.
	(exec_cmd, case 'e'):  Switched to the recorded colormap.
	(RecolorWindow):  Added the used colormap to the linked list so that
	all colormaps for the plot are remembered.
	(Find_Plot_In_Linked_List_By_CMap):  Search colormap linked list.
	Bug #1447277

	* demo/multipalette.dem:  Two palette multiplot script for debugging.

2007-06-11  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_options PNG_vector): Apply current linewidth and
	dashlength to dotted lines. Of course, the only dotted line support
	we have at this point is linetype 0, used for the grid and axes...
	Based on Mike Sutton's patchset #1659135

2007-06-10  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Break out "axes" into its own subsection, and add
	cross-references so that people can find it.

2007-06-09  Ethan Merritt  <merritt@u.washington.edu>

	* term/wxt.trm (wxt_text_wrapper): At the end of a plot, save the final
	axis scaling information so that mouse coordinates can be tracked.

	* src/wxterminal/wxt_term.h src/wxterminal/wxt_gui.h:
	Define data structures that hold axis scaling information.

	* src/wxterminal/wxt_gui.cpp (wxt_update_mousecoords_in_window